<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.fireflies.dffu.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/size_16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/url_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_16dp"
            android:hint="@string/enter_url_to_download_a_file"
            android:importantForAutofill="no"
            android:inputType="textUri"
            tools:text="@string/enter_url_to_download_a_file" />

        <Button
            android:id="@+id/start_download"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_16dp"
            android:background="@color/colorAccent"
            android:text="@string/start" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/file_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/file_name" />

            <SeekBar
                android:id="@+id/download_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:progress="30" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/minutes_left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:gravity="start"
                    tools:text="@string/minutes_left" />

                <TextView
                    android:id="@+id/state_of_progress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:gravity="end"
                    tools:text="@string/state_of_progress" />
            </LinearLayout>

            <TextView
                android:id="@+id/percentage_of_completion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/default_percentage" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dummy_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_16dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/dummy_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_16dp"
                android:hint="@string/enter_anything"
                android:importantForAutofill="no"
                android:inputType="text" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_16dp"
                android:background="@color/colorAccent"
                android:text="@string/dummy" />


        </LinearLayout>

    </LinearLayout>
</layout>